src/main/java/com/example/credit_service_project/service/errors/exceptions/NotFoundException.java
package com.example.credit_service_project.service.errors.exceptions;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}
